# docs/swagger.yaml
@@ -1,55 +1,138 @@
-basePath: /api/v1
+basePath: /
 definitions:
   domain.Comment:
     properties:
       body:
-        example: lorem ipsum
+        type: string
+      createdDate:
+        type: string
+      deletedDate:
         type: string
       email:
-        example: example@mail.com
         type: string
       id:
-        example: 1
         type: integer
       name:
-        example: Bohdan
         type: string
-      post_id:
-        example: 3
+      postID:
         type: integer
-    required:
-    - body
-    - email
-    - name
-    - post_id
+      updatedDate:
+        type: string
     type: object
   domain.Post:
     properties:
       body:
-        example: Lorem ipsum
+        type: string
+      createdDate:
+        type: string
+      deletedDate:
         type: string
       id:
-        example: 1
         type: integer
+      title:
+        type: string
+      updatedDate:
+        type: string
+      userID:
+        type: integer
+    type: object
+  domain.User:
+    properties:
+      createdDate:
+        type: string
+      deletedDate:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      password:
+        type: string
+      updatedDate:
+        type: string
+    type: object
+  requests.CommentRequest:
+    properties:
+      body:
+        example: lorem ipsum
+        type: string
+    required:
+    - body
+    type: object
+  requests.LoginAuth:
+    properties:
+      email:
+        example: example@email.com
+        type: string
+      password:
+        example: "01234567890"
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  requests.PostRequest:
+    properties:
+      body:
+        example: Lorem ipsum
+        type: string
       title:
         example: Lorem ipsum
         type: string
-      user_id:
-        example: 1
-        type: integer
     required:
     - body
     - title
-    - user_id
     type: object
-host: localhost:8080
+  requests.RegisterAuth:
+    properties:
+      email:
+        example: example@email.com
+        type: string
+      name:
+        minLength: 3
+        type: string
+      password:
+        example: "01234567890"
+        minLength: 8
+        type: string
+    required:
+    - email
+    - name
+    - password
+    type: object
+  response.CommentResponse:
+    properties:
+      body:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      post_id:
+        type: integer
+    type: object
+  response.LoginResponse:
+    properties:
+      accessToken:
+        type: string
+      exp:
+        type: integer
+      refreshToken:
+        type: string
+    type: object
+host: localhost:8000
 info:
   contact: {}
   description: REST service for NIX TRAINEE PROGRAM
-  title: NIX TRAINEE PROGRAM Dmo App
+  title: NIX TRAINEE PROGRAM Demo App
   version: V1.echo
 paths:
-  /comments/comment/{id}:
+  /api/v1/comments/comment/{id}:
     get:
       description: Get Comment
       parameters:
@@ -73,7 +156,7 @@ paths:
       summary: Get Comment
       tags:
       - Comments Actions
-  /comments/delete/{id}:
+  /api/v1/comments/delete/{id}:
     delete:
       description: Delete Comment
       parameters:
@@ -93,7 +176,7 @@ paths:
       summary: Delete Comment
       tags:
       - Comments Actions
-  /comments/save:
+  /api/v1/comments/save:
     post:
       consumes:
       - application/json
@@ -104,14 +187,14 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/domain.Comment'
+          $ref: '#/definitions/requests.CommentRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/domain.Comment'
+            $ref: '#/definitions/response.CommentResponse'
         "400":
           description: Bad Request
           schema: {}
@@ -126,7 +209,7 @@ paths:
       summary: Save Comment
       tags:
       - Comments Actions
-  /comments/update:
+  /api/v1/comments/update:
     put:
       consumes:
       - application/json
@@ -137,7 +220,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/domain.Comment'
+          $ref: '#/definitions/requests.CommentRequest'
       produces:
       - application/json
       responses:
@@ -156,7 +239,7 @@ paths:
       summary: Update Comment
       tags:
       - Comments Actions
-  /posts/delete/{id}:
+  /api/v1/posts/delete/{id}:
     delete:
       description: Delete Post
       parameters:
@@ -178,7 +261,7 @@ paths:
       summary: Delete Post
       tags:
       - Posts Actions
-  /posts/post/{id}:
+  /api/v1/posts/post/{id}:
     get:
       description: Get Post
       parameters:
@@ -202,7 +285,7 @@ paths:
       summary: Get Post
       tags:
       - Posts Actions
-  /posts/save:
+  /api/v1/posts/save:
     post:
       consumes:
       - application/json
@@ -213,7 +296,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/domain.Post'
+          $ref: '#/definitions/requests.PostRequest'
       produces:
       - application/json
       responses:
@@ -235,7 +318,7 @@ paths:
       summary: Save Post
       tags:
       - Posts Actions
-  /posts/update:
+  /api/v1/posts/update:
     put:
       consumes:
       - application/json
@@ -246,7 +329,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/domain.Post'
+          $ref: '#/definitions/requests.PostRequest'
       produces:
       - application/json
       responses:
@@ -262,6 +345,60 @@ paths:
       summary: Update Post
       tags:
       - Posts Actions
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: LoginAuth
+      parameters:
+      - description: users email, users password
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/requests.LoginAuth'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.LoginResponse'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+      summary: LoginAuth
+      tags:
+      - Auth Actions
+  /register:
+    post:
+      consumes:
+      - application/json
+      description: New user registration
+      operationId: user-register
+      parameters:
+      - description: users email, users password
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/requests.RegisterAuth'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/domain.User'
+        "400":
+          description: Bad Request
+          schema: {}
+      summary: Register
+      tags:
+      - Auth Actions
 securityDefinitions:
   ApiKeyAuth:
     in: header
