# internal/infra/http/requests/auth_request.go
@@ -15,11 +15,22 @@ type RegisterAuth struct {
 	Name     string `json:"name" validate:"required,gte=3"`
 }
 
-type Refresh struct {
-	Token string `json:"token" validate:"required" example:"refresh_token"`
+func (r RegisterAuth) RegisterToUser() domain.User {
+	return domain.User{
+		Email:    r.Email,
+		Name:     r.Name,
+		Password: r.Password,
+	}
 }
 
-func (r RegisterAuth) RegisterToUser() domain.User {
+type RegisterOauth2 struct {
+	ID       string `json:"id" validate:"required"`
+	Email    string `json:"email" validate:"required,email" example:"example@email.com"`
+	Password string `json:"password" validate:"required,gte=8" example:"01234567890"`
+	Name     string `json:"name" validate:"required,gte=3"`
+}
+
+func (r RegisterOauth2) RegisterToUser() domain.User {
 	return domain.User{
 		Email:    r.Email,
 		Name:     r.Name,
